@@ -386,6 +386,8 @@ $fontLight: lighter 10px tahoma, verdana;
       border: 1px solid $blackLight;
       font-size: small;
       margin-right: 5px;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
